--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,10 @@
         "php": "^8.0.2",
         "algolia/algoliasearch-client-php": "^3.2",
         "astrotomic/laravel-translatable": "^11.0.0",
+        "bagisto/bagisto-bulk-upload": "dev-master",
         "bagisto/bagisto-dhl-shipping": "dev-master",
         "bagisto/bagisto-rma": "dev-master",
+        "bagisto/bagisto-search-suggestion": "dev-master",
         "bagisto/legacy-api": "^1.0",
         "bagisto/rest-api": "dev-master",
         "bagistobrasil/bagisto-product-social-share": "^0.1.2",
@@ -39,7 +41,9 @@
         "paypal/paypal-checkout-sdk": "1.0.1",
         "prettus/l5-repository": "^2.6",
         "pusher/pusher-php-server": "^7.0",
+        "smartarget/bagisto-whatsapp-contact-us": "^1.0",
         "spatie/laravel-ignition": "^1.0",
+        "wontonee/paytm": "^4.0",
         "wontonee/razorpay": "^3.0"
     },
     "require-dev": {
@@ -106,7 +110,9 @@
             "Webkul\\SocialLogin\\": "packages/Webkul/SocialLogin/src",
             "Webkul\\DebugBar\\": "packages/Webkul/DebugBar/src",
             "Webkul\\Marketing\\": "packages/Webkul/Marketing/src",
-            "Webkul\\Notification\\": "packages/Webkul/Notification/src"
+            "Webkul\\Notification\\": "packages/Webkul/Notification/src",
+            "Webkul\\Bulkupload\\": "packages/Webkul/Bulkupload",
+            "RKREZA\\Contact\\": "packages/Webkul/RKREZA/Contact/src"
         }
     },
     "autoload-dev": {
