--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ APP_CURRENCY=USD
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=bagisto
+DB_DATABASE=ekart
 DB_USERNAME=root
 DB_PASSWORD=
 DB_PREFIX=
