--- a/composer.json
+++ b/composer.json
@@ -112,6 +112,7 @@
             "Webkul\\Marketing\\": "packages/Webkul/Marketing/src",
             "Webkul\\Notification\\": "packages/Webkul/Notification/src",
             "Webkul\\Bulkupload\\": "packages/Webkul/Bulkupload",
+            "Webkul\\SizeChart\\": "packages/Webkul/SizeChart/src",
             "RKREZA\\Contact\\": "packages/Webkul/RKREZA/Contact/src"
         }
     },
