--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Bagisto
+APP_NAME=WorldEkart
 APP_ENV=local
 APP_VERSION=1.0.1
 APP_KEY=base64:/WwUYivYmGAbYHYDZDbQ8fmQiz8BcnkYJU+fF68FYjg=
