--- a/.env
+++ b/.env
@@ -28,16 +28,16 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=log
+MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=
-MAIL_PASSWORD=
+MAIL_USERNAME=c20cf43ddfbd04
+MAIL_PASSWORD=95374027a33dfa
 MAIL_ENCRYPTION=tls
 
-SHOP_MAIL_FROM=
-ADMIN_MAIL_TO=
-MAIL_FROM_NAME=
+SHOP_MAIL_FROM=mannukumarshah@gmail.com
+ADMIN_MAIL_TO=mannukumarshah@gmail.com
+MAIL_FROM_NAME= WorldEkart
 
 FIXER_API_KEY=
 EXCHANGE_RATES_API_KEY=
