--- a/.env
+++ b/.env
@@ -11,11 +11,11 @@ LOG_CHANNEL=stack
 APP_CURRENCY=USD
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=ekart
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=u285583456_ekart
+DB_USERNAME=u285583456_ekart
+DB_PASSWORD=Worldekart@2022
 DB_PREFIX=
 
 BROADCAST_DRIVER=log
@@ -60,7 +60,7 @@ TWITTER_CALLBACK_URL=https://yourhost.com/customer/social-login/twitter/callback
 
 GOOGLE_CLIENT_ID=906960171751-457onoth2mj1s2v2md0ja89cdn100fks.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
-GOOGLE_CALLBACK_URL=http://localhost:8000/customer/social-login/google/callback
+GOOGLE_CALLBACK_URL="${APP_URL}/customer/social-login/google/callback"
 
 LINKEDIN_CLIENT_ID=
 LINKEDIN_CLIENT_SECRET=
