--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_VERSION=1.4.2
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://test.worldekart.com
 APP_ADMIN_URL=admin
 APP_TIMEZONE=Asia/Kolkata
 APP_LOCALE=en
@@ -11,11 +11,11 @@ LOG_CHANNEL=stack
 APP_CURRENCY=USD
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=
-DB_USERNAME=
-DB_PASSWORD=
+DB_DATABASE=u285583456_ekart
+DB_USERNAME=u285583456_ekart
+DB_PASSWORD=Worldekart@2022
 DB_PREFIX=
 
 BROADCAST_DRIVER=log
