--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_VERSION=1.0.1
 APP_KEY=base64:/WwUYivYmGAbYHYDZDbQ8fmQiz8BcnkYJU+fF68FYjg=
 APP_DEBUG=true
-APP_URL=http://localhost:8000
+APP_URL=https://test.worldekart.com
 APP_ADMIN_URL=admin
 APP_TIMEZONE=Asia/Kolkata
 APP_LOCALE=en
