--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_VERSION=1.0.1
 APP_KEY=base64:/WwUYivYmGAbYHYDZDbQ8fmQiz8BcnkYJU+fF68FYjg=
 APP_DEBUG=true
-APP_URL=https://test.worldekart.com
+APP_URL=http://localhost:8000
 APP_ADMIN_URL=admin
 APP_TIMEZONE=Asia/Kolkata
 APP_LOCALE=en
@@ -13,10 +13,14 @@ APP_CURRENCY=USD
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=u285583456_ekart
-DB_USERNAME=u285583456_ekart
-DB_PASSWORD=Worldekart@2022
+DB_DATABASE=ekart
+DB_USERNAME=root
+DB_PASSWORD=
 DB_PREFIX=
+
+live_DB_DATABASE=u285583456_ekart
+live_DB_USERNAME=u285583456_ekart
+live_DB_PASSWORD=Worldekart@2022
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -28,7 +32,7 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=smtp
+MAIL_DRIVER=log
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
 MAIL_USERNAME=c20cf43ddfbd04
@@ -52,11 +56,11 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 FACEBOOK_CLIENT_ID=
 FACEBOOK_CLIENT_SECRET=
-FACEBOOK_CALLBACK_URL=https://yourhost.com/customer/social-login/facebook/callback
+FACEBOOK_CALLBACK_URL="${APP_URL}/customer/social-login/facebook/callback"
 
 TWITTER_CLIENT_ID=
 TWITTER_CLIENT_SECRET=
-TWITTER_CALLBACK_URL=https://yourhost.com/customer/social-login/twitter/callback
+TWITTER_CALLBACK_URL="${APP_URL}/customer/social-login/twitter/callback"
 
 GOOGLE_CLIENT_ID=906960171751-457onoth2mj1s2v2md0ja89cdn100fks.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
@@ -64,8 +68,8 @@ GOOGLE_CALLBACK_URL="${APP_URL}/customer/social-login/google/callback"
 
 LINKEDIN_CLIENT_ID=
 LINKEDIN_CLIENT_SECRET=
-LINKEDIN_CALLBACK_URL=https://yourhost.com/customer/social-login/linkedin/callback
+LINKEDIN_CALLBACK_URL="${APP_URL}/customer/social-login/linkedin/callback"
 
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
-GITHUB_CALLBACK_URL=https://yourhost.com/customer/social-login/github/callback
+GITHUB_CALLBACK_URL="${APP_URL}/customer/social-login/github/callback"
