--- a/.env
+++ b/.env
@@ -32,15 +32,15 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=log
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=c20cf43ddfbd04
-MAIL_PASSWORD=95374027a33dfa
-MAIL_ENCRYPTION=tls
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.hostinger.com
+MAIL_PORT=465
+MAIL_USERNAME=info@worldekart.com
+MAIL_PASSWORD=Worldekart@2022
+MAIL_ENCRYPTION=ssl
 
-SHOP_MAIL_FROM=mannukumarshah@gmail.com
-ADMIN_MAIL_TO=mannukumarshah@gmail.com
+SHOP_MAIL_FROM=info@worldekart.com
+ADMIN_MAIL_TO=info@worldekart.com
 MAIL_FROM_NAME= WorldEkart
 
 FIXER_API_KEY=
